node-red/node-red-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  labels:
    io.kompose.service: node-red
  generation: 1
  name: node-red
  namespace: homeautomation
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: node-red
    spec:
      containers:
      - image: nodered/node-red-docker:0.20.7-rpi-v8
        imagePullPolicy: IfNotPresent
        name: node-red
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 1880
        volumeMounts:
        - mountPath: /data
          name: node-red-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: node-red-data
        nfs:
         server: 192.168.178.33
         path: "/volume1/openflixr/node-red-data/"
status: {}
